--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,44 @@ font-size: 100px;
 }
 
 h2 {
+    width: 190px;
     border: solid 3px;
     border-color: black;
+    margin: 5px;
+    padding: 4px;
+    z-index: 2;
+   position: relative;
+   left: 28px;
+   bottom: 20px;
+   overflow: visible;
+   background-color: lightsalmon;
+}
+
+#header-1 {
+    width: 150px;
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+    grid-template-columns: repeat(6, 1fr);
+}
+
+.container{
+    z-index: 1;
+}
+
+.grid section {
+    border: 3px dashed black;
+    justify-items: center;
+}
+
+.grid section .container-text {
+    text-align: center;
+    padding: 3px;
+    margin: 3px:
+}
+
+.center-css .css-text {
+   align-content: start;
 }
