--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,7 @@
-
+main {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 body {
     background-color: azure;
@@ -17,6 +20,13 @@ font-size: 100px;
     text-align: center;
     font-size: 20px;
 }
+
+@media screen and (max-width: 780px) {
+    body {
+        background-color: lightblue;
+    }
+}
+   
 
 h2 {
     width: 190px;
